--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,8 +49,8 @@
           </div>
         </div>
         <div class="card-footer text-center">
-          Made with <i class="fas fa-heart" style="color: red"></i> by Akansh
-          Sirohi
+          Made with <i class="fas fa-heart" style="color: red"></i> by Robins
+          Aryan
         </div>
       </div>
     </div>
